fix: Spacing on empty share page

--- a/src/drive/styles/main.styl
+++ b/src/drive/styles/main.styl
@@ -10,3 +10,10 @@ div:focus
     +small-screen()
         padding 0
 
+.center-layout
+    display flex
+    width 100%
+
+    +medium-screen()
+        min-height 100vh
+        padding 0 2rem
